# demo-app

./: devbox.json  pyproject.toml
.github/workflows/: build.yml  ci.yml  test.yml
deploy/: main.test.ts  main.ts
src/demo_app/: __init__.py
